2004-06-19 Sivaiah Nallagatla <snallagatla@novell.com>

       * gui/component/addressbook-config.c (dialog_to_source) : 
       set auth-domain property on groupwise sources, so that 
       newly created contact groups can share remembered passwords 

2004-06-18  Jeffrey Stedfast  <fejj@novell.com>

	* conduit/address-conduit.c (ecard_from_remote_record): Always set
	the File_As attribute in case the pilot attrib changed. Fixes bug
	#59723.

2004-06-18  Chris Toshok  <toshok@ximian.com>

	* gui/component/select-names/e-select-names-model.c
	(e_select_names_model_load_contacts): only go through the process
	of creating/loading the EBook if the model has some data in it.

2004-06-18  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #59376 ]

	* gui/component/addressbook-view.c (fill_popup_menu_callback):
	make this work with absolute uris in sources.  Thanks to Sushma
	Rai for the initial patch to fix this.

2004-06-17  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #58696 ]
	
	* gui/widgets/eab-gui-util.c (eab_transfer_contacts): use
	addressbook_load instead of e_book_async_open, so we do auth stuff
	for the destination book.

2004-06-17  Chris Toshok  <toshok@ximian.com>

	* gui/contact-editor/e-contact-editor.c (e_contact_editor_new):
	EBookFieldsCallback -> EBookEListCallback.
	(e_contact_editor_set_property): same.

2004-06-17  Chris Toshok  <toshok@ximian.com>

	* util/eab-book-util.c (eab_name_and_email_query):
	EBookContactsCallback -> EBookListCallback.
	(eab_nickname_query): same.

	* printing/e-contact-print.c: e-book-async.h -> e-book.h

	* gui/widgets/eab-vcard-control.c: e-book-async.h -> e-book.h.

	* gui/widgets/e-addressbook-model.h: e-book-async.h -> e-book.h.

	* gui/widgets/eab-popup-control.h: e-book-async.h -> e-book.h.

	* gui/widgets/eab-popup-control.c: remove e-book-async.h include.
	
	* gui/merging/eab-contact-merging.h: e-book-async.h -> e-book.h.

	* gui/contact-editor/e-contact-editor.h: e-book-async.h ->
	e-book.h.
